<resources>
    <string name="app_name">Money Manger</string>
    <string name="welcome">Welcome to</string>
    <string name="pass_code">Create your PassCode</string>
    <string name="pass_code_wrong">The PassCode cannot be empty and less than 5 number</string>

    <string name="button_cancel">cancel</string>
    <string name="button_delete">delete</string>

    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>

    <string name="parameters">Parameters</string>
    <string name="change_user">Change passcode</string>
    <string name="exit">Exit</string>

    <string name="tab_expense">Expense</string>
    <string name="tab_income">Income</string>
    <string name="tab_balance">Balance</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_item_price">1000 $</string>
    <string name="toast_isEmpty">The item\'s name or item\'s price cannot be empty</string>
    <string name="confirm">confirm</string>
    <string name="delete">Delete</string>

    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="title_dialog">Money Manager</string>
    <string name="message_remove">Do you want to remove these items?</string>

</resources>
