<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.ensias.moneyManager.authenticationActivity.AuthorizationActivity">

    <ImageView
        android:layout_width="144dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/amarante"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="44sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="10dp"
            android:text="Enter Your Password"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pass_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            tools:text="* * * * *" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            style="@style/ButtonStyle"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button_2"
            style="@style/ButtonStyle"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button_3"
            style="@style/ButtonStyle"
            android:text="@string/button_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            style="@style/ButtonStyle"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/button_5"
            style="@style/ButtonStyle"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/button_6"
            style="@style/ButtonStyle"
            android:text="@string/button_6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            style="@style/ButtonStyle"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/button_8"
            style="@style/ButtonStyle"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/button_9"
            style="@style/ButtonStyle"
            android:text="@string/button_9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_0"
            style="@style/ButtonStyle"
            android:text="@string/button_0" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:text="@string/button_cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:text="@string/button_delete"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>
