<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.ensias.moneyManager.authenticationActivity.AuthorizationActivity"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="144dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:layout_marginTop="-120dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:fontFamily="@font/amarante"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pass_code"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/pass_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLength="5"
            android:inputType="number"
            android:padding="5dp"
            tools:text="* * * * * "
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/add_pass_code"
            android:layout_marginTop="40dp"
            android:background="@color/colorCardViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>
